@@ -1,3 +1,4 @@
+* BUG#8953 Ajout d'un avertissement lors de la création de plusieurs assureurs sur le même tiers
 * OTH#0000 Le fait qu'une donnée complémentaire n'existe pas dans les règles ne doit pas être une erreur
 
 Version 2.0 - 2018-04-13
